<resources>
    <string name="app_name">Why do you</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="want_to_use">want to use</string>
    <string name="apps">Apps</string>
    <string name="games">Games</string>


    <string name="MY_PREFS">MY_PREFS</string>
    <string name="CHECKED_MC_CARD">CHECKED_MC_CARD</string>
    <string name="LOCKED_PACKAGE">LOCKED_PACKAGE</string>
    <string name="CURRENT_TAB_ID">CURRENT_TAB_ID</string>
    <string name="ACTIVITY_POS">ACTIVITY_POS</string>
    <string name="ACTIVITY_TIMER">ACTIVITY_TIMER</string>

    <string name="default_lock_time_interval">5</string>
    <string name="lock_time_interval">Lock Time Interval</string>
    <string name="set_time_interval">Set time interval</string>
    <string name="key_lock_time_intervals">key_lock_time_intervals</string>
    <string name="locked_apps_count">Locked in total: %1$d</string>

    <string name="system_apps_switch">Show system apps</string>
    <string name="summary_system_apps_switch">Turn on to show system apps</string>
    <string name="key_system_apps_switch">key_system_apps_switch</string>

    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="refresh">Refresh</string>
    <string name="content_description_favorite">Refresh apps, Image View, tap to refresh</string>
    <string name="content_description_settings">Open menu, Image View, tap to open settings</string>
    <string name="content_description_more">Open menu, Image View, tap to open about me screen</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="task_completed">Task  completed</string>

    <string name="uri_github_nicolas_kargruber">https://github.com/NicolasKargruber</string>
    <string name="uri_linkedin_nicolas_kargruber">https://www.linkedin.com/in/nicolas-kargruber-78a34123b/?locale=en_US</string>

    <string name="locked">Locked</string>
    <string name="not_locked">Not locked</string>
    <string name="locked_in_total">Locked in total:</string>


    <string name="not_lockable_system_app">System apps cannot be locked</string>
    <string name="not_lockable_app_why_do_you">WhyDoYou itself cannot be locked</string>

    <string name="game_numbers_first_instruction">Click grid to start</string>
    <string name="game_numbers_second_instruction">Click the numbers in ascending order</string>

    <string-array name="pref_lock_time_interval">
        <item>1 min</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>60 min</item>
    </string-array>

    <string-array name="pref_interval">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

</resources>