<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

<item
    android:id="@+id/favorite"
    android:icon="@drawable/ic_round_favorite_24"
    android:title="@string/favorite"
    android:contentDescription="@string/content_description_favorite"
    app:showAsAction="ifRoom" />

<item
    android:id="@+id/nav_settings"
    android:title="@string/settings"
    app:showAsAction="ifRoom"
    android:contentDescription="@string/content_description_settings"
    android:icon="@drawable/ic_round_settings_24"/>

    <item
        android:id="@+id/more"
        android:title="@string/about"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="never" />
</menu>